--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#">Home</a>
         </li>
         <li>
-          <a href="#">About Us</a>
+          <a href="about1.html">About Us</a>
         </li>
         <li>
           <a href="#">Contact Us</a>
@@ -57,7 +57,7 @@
         <a href="#">Home</a>
       </li>
       <li>
-        <a href="about.html">About Us</a>
+        <a href="about1.html">About Us</a>
       </li>
       <li>
         <a href="#">Contact Us</a>
@@ -91,7 +91,7 @@
     <div class="box-text">
       <h2 class="text-xl">Events Manager</h2>
       <p class="text-md">Welcome to the event manager. Here you'll have the list of all the events being held.</p>
-      <a href="#" class="btn btn-light-outline">Visit Now</a>
+      <a href="event.html" class="btn btn-light-outline">Visit Now</a>
     </div>
   </section>
   <!-- Box C: FAQs-->
@@ -100,7 +100,7 @@
     <div class="box-text">
       <h2 class="text-xl">FAQs</h2>
       <p class="text-md">Welcome to the FAQ portal. Let's get some doubts cleared!</p>
-      <a href="#" class="btn btn-light-outline">Clcik Here</a>
+      <a href="https://stackoverflow.com/" class="btn btn-light-outline">Clcik Here</a>
     </div>
   </section>
   <!-- Box D: Coding sites-->
@@ -110,7 +110,7 @@
       <h2 class="text-xl">Coding Sites</h2>
       <p class="text-md">This section is for all the programmers out there. Come and explore the different materials to
         help you in your journey.</p>
-      <a href="#" class="btn btn-light-outline">Click Here</a>
+      <a href="https://leetcode.com/" class="btn btn-light-outline">Click Here</a>
     </div>
   </section>
   <!-- Box E: Github & Git-->
@@ -119,7 +119,7 @@
     <div class="box-text">
       <h2 class="text-md">Git and Github</h2>
       <p class="text-sm">Explore more about git and github!</p>
-      <a href="#" class="btn btn-light-outline">Click Here</a>
+      <a href="https://github.com/" class="btn btn-light-outline">Click Here</a>
     </div>
   </section>
   <div class="divider"></div>
