--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
       <ul class="navbar-nav-right">
         <li>
-          <a href="#">
+          <a href="/locate.html">
             <img src="marker.png" alt="" />
             <span>Locate Us</span>
           </a>
         </li>
-        <li><button class="btn btn-dark-outline">Sign In</button></li>
+        <li><button class="btn btn-dark-outline"><a href="/sign.html">Sign In</a></button></li>
         <li><button class="btn btn-dark">Want to Contribute?</button></li>
       </ul>
 
@@ -68,7 +68,7 @@
       <button class="btn btn-dark">Contribute Now</button>
       <div>
         <a href="#">
-          <img src="marker.png" alt="" />
+          <img src="marker.png" alt="marker" />
           <span>Locate Us</span>
         </a>
       </div>
@@ -87,7 +87,7 @@
   </section>
   <!-- Box B: Events-->
   <section class="box box-b bg-secondary grid-col-2">
-    <img src="event.png" alt="">
+    <img src="event.png" alt="event">
     <div class="box-text">
       <h2 class="text-xl">Events Manager</h2>
       <p class="text-md">Welcome to the event manager. Here you'll have the list of all the events being held.</p>
@@ -105,7 +105,7 @@
   </section>
   <!-- Box D: Coding sites-->
   <section class="box box-d bg-primary grid-col-2">
-    <img src="block-D-modified.png" alt="">
+    <img src="block-D-modified.png" alt="block-D">
     <div class="box-text">
       <h2 class="text-xl">Coding Sites</h2>
       <p class="text-md">This section is for all the programmers out there. Come and explore the different materials to
@@ -115,7 +115,7 @@
   </section>
   <!-- Box E: Github & Git-->
   <section class="box box-e bg-secondary grid-col-2 grid-reversed">
-    <img src="block c.png" alt="">
+    <img src="block c.png" alt="block c">
     <div class="box-text">
       <h2 class="text-md">Git and Github</h2>
       <p class="text-sm">Explore more about git and github!</p>
